fix: stop text input from jumping when focused

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,8 @@ body{
     box-shadow: 2px 2px 2px;
     background-color: #FAF7F0;
     justify-content: space-between;
+    width: 214px;
+    margin: 0 auto;
 }
 
 input[type="search"]{
@@ -49,7 +51,7 @@ input[type="search"]{
     margin: 0;
     padding: 7px 8px;
     background: inherit;
-
+    max-width: 178px;
 }
 
 
